made changes to preprocessing and app

--- a/Whatsaap-Analysis.ipynb
+++ b/Whatsaap-Analysis.ipynb
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('WhatsApp Chat with Aman New.txt','r', encoding='utf-8')"
+    "f = open('Chat1.txt','r', encoding='utf-8')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3241,7 +3241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3250,7 +3250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -3274,7 +3274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3296,7 +3296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3363,7 +3363,7 @@
        "4  Your security code with Aman New changed. Tap ... 2022-06-15 11:07:00"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3379,7 +3379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3388,7 +3388,7 @@
        "(3118, 2)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3399,7 +3399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -3479,7 +3479,7 @@
        "4  Your security code with Aman New changed. Tap ...  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3509,7 +3509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3518,7 +3518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -3604,7 +3604,7 @@
        "4  Your security code with Aman New changed. Tap ...  2022  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3615,7 +3615,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['only_date'] = df['message_date'].dt.date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>message_date</th>\n",
+       "      <th>user</th>\n",
+       "      <th>message</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>minute</th>\n",
+       "      <th>only_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-11-22 07:50:00</td>\n",
+       "      <td>group_notification</td>\n",
+       "      <td>Messages and calls are end-to-end encrypted. N...</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>November</td>\n",
+       "      <td>22</td>\n",
+       "      <td>7</td>\n",
+       "      <td>50</td>\n",
+       "      <td>2021-11-22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-11-22 07:50:00</td>\n",
+       "      <td>group_notification</td>\n",
+       "      <td>Your security code with Aman New changed. Tap ...</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>November</td>\n",
+       "      <td>22</td>\n",
+       "      <td>7</td>\n",
+       "      <td>50</td>\n",
+       "      <td>2021-11-22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-02-02 02:43:00</td>\n",
+       "      <td>group_notification</td>\n",
+       "      <td>Your security code with Aman New changed. Tap ...</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>February</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>43</td>\n",
+       "      <td>2022-02-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-06-15 11:07:00</td>\n",
+       "      <td>Hey</td>\n",
+       "      <td>Ham hi message.</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>June</td>\n",
+       "      <td>15</td>\n",
+       "      <td>11</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2022-06-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-06-15 11:07:00</td>\n",
+       "      <td>group_notification</td>\n",
+       "      <td>Your security code with Aman New changed. Tap ...</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>June</td>\n",
+       "      <td>15</td>\n",
+       "      <td>11</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2022-06-15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         message_date                user  \\\n",
+       "0 2021-11-22 07:50:00  group_notification   \n",
+       "1 2021-11-22 07:50:00  group_notification   \n",
+       "2 2022-02-02 02:43:00  group_notification   \n",
+       "3 2022-06-15 11:07:00                 Hey   \n",
+       "4 2022-06-15 11:07:00  group_notification   \n",
+       "\n",
+       "                                             message  year     month  day  \\\n",
+       "0  Messages and calls are end-to-end encrypted. N...  2021  November   22   \n",
+       "1  Your security code with Aman New changed. Tap ...  2021  November   22   \n",
+       "2  Your security code with Aman New changed. Tap ...  2022  February    2   \n",
+       "3                                    Ham hi message.  2022      June   15   \n",
+       "4  Your security code with Aman New changed. Tap ...  2022      June   15   \n",
+       "\n",
+       "   hour  minute   only_date  \n",
+       "0     7      50  2021-11-22  \n",
+       "1     7      50  2021-11-22  \n",
+       "2     2      43  2022-02-02  \n",
+       "3    11       7  2022-06-15  \n",
+       "4    11       7  2022-06-15  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3624,7 +3767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3633,7 +3776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3642,7 +3785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3651,19 +3794,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32md:\\Whatsaap-Chat-Analysis\\Whatsaap-Analysis.ipynb Cell 17\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Whatsaap-Chat-Analysis/Whatsaap-Analysis.ipynb#X22sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m df\u001b[39m.\u001b[39mhead()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>message_date</th>\n",
+       "      <th>user</th>\n",
+       "      <th>message</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>minute</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-11-22 07:50:00</td>\n",
+       "      <td>group_notification</td>\n",
+       "      <td>Messages and calls are end-to-end encrypted. N...</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>November</td>\n",
+       "      <td>22</td>\n",
+       "      <td>7</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-11-22 07:50:00</td>\n",
+       "      <td>group_notification</td>\n",
+       "      <td>Your security code with Aman New changed. Tap ...</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>November</td>\n",
+       "      <td>22</td>\n",
+       "      <td>7</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-02-02 02:43:00</td>\n",
+       "      <td>group_notification</td>\n",
+       "      <td>Your security code with Aman New changed. Tap ...</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>February</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-06-15 11:07:00</td>\n",
+       "      <td>Hey</td>\n",
+       "      <td>Ham hi message.</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>June</td>\n",
+       "      <td>15</td>\n",
+       "      <td>11</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-06-15 11:07:00</td>\n",
+       "      <td>group_notification</td>\n",
+       "      <td>Your security code with Aman New changed. Tap ...</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>June</td>\n",
+       "      <td>15</td>\n",
+       "      <td>11</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         message_date                user  \\\n",
+       "0 2021-11-22 07:50:00  group_notification   \n",
+       "1 2021-11-22 07:50:00  group_notification   \n",
+       "2 2022-02-02 02:43:00  group_notification   \n",
+       "3 2022-06-15 11:07:00                 Hey   \n",
+       "4 2022-06-15 11:07:00  group_notification   \n",
+       "\n",
+       "                                             message  year     month  day  \\\n",
+       "0  Messages and calls are end-to-end encrypted. N...  2021  November   22   \n",
+       "1  Your security code with Aman New changed. Tap ...  2021  November   22   \n",
+       "2  Your security code with Aman New changed. Tap ...  2022  February    2   \n",
+       "3                                    Ham hi message.  2022      June   15   \n",
+       "4  Your security code with Aman New changed. Tap ...  2022      June   15   \n",
+       "\n",
+       "   hour  minute  \n",
+       "0     7      50  \n",
+       "1     7      50  \n",
+       "2     2      43  \n",
+       "3    11       7  \n",
+       "4    11       7  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
