Added helper and modified app

--- a/Whatsaap-Analysis.ipynb
+++ b/Whatsaap-Analysis.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -3241,7 +3241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3250,7 +3250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3274,7 +3274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3296,7 +3296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -3363,7 +3363,7 @@
        "4  Your security code with Aman New changed. Tap ... 2022-06-15 11:07:00"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3379,7 +3379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -3388,7 +3388,7 @@
        "(3118, 2)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3399,7 +3399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3479,7 +3479,7 @@
        "4  Your security code with Aman New changed. Tap ...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3509,7 +3509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3518,7 +3518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3604,7 +3604,7 @@
        "4  Your security code with Aman New changed. Tap ...  2022  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3615,7 +3615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3624,7 +3624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -3652,10 +3652,6 @@
        "      <th>user</th>\n",
        "      <th>message</th>\n",
        "      <th>year</th>\n",
-       "      <th>month</th>\n",
-       "      <th>day</th>\n",
-       "      <th>hour</th>\n",
-       "      <th>minute</th>\n",
        "      <th>only_date</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -3666,10 +3662,6 @@
        "      <td>group_notification</td>\n",
        "      <td>Messages and calls are end-to-end encrypted. N...</td>\n",
        "      <td>2021</td>\n",
-       "      <td>November</td>\n",
-       "      <td>22</td>\n",
-       "      <td>7</td>\n",
-       "      <td>50</td>\n",
        "      <td>2021-11-22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3678,10 +3670,6 @@
        "      <td>group_notification</td>\n",
        "      <td>Your security code with Aman New changed. Tap ...</td>\n",
        "      <td>2021</td>\n",
-       "      <td>November</td>\n",
-       "      <td>22</td>\n",
-       "      <td>7</td>\n",
-       "      <td>50</td>\n",
        "      <td>2021-11-22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3690,10 +3678,6 @@
        "      <td>group_notification</td>\n",
        "      <td>Your security code with Aman New changed. Tap ...</td>\n",
        "      <td>2022</td>\n",
-       "      <td>February</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>43</td>\n",
        "      <td>2022-02-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3702,10 +3686,6 @@
        "      <td>Hey</td>\n",
        "      <td>Ham hi message.</td>\n",
        "      <td>2022</td>\n",
-       "      <td>June</td>\n",
-       "      <td>15</td>\n",
-       "      <td>11</td>\n",
-       "      <td>7</td>\n",
        "      <td>2022-06-15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3714,10 +3694,6 @@
        "      <td>group_notification</td>\n",
        "      <td>Your security code with Aman New changed. Tap ...</td>\n",
        "      <td>2022</td>\n",
-       "      <td>June</td>\n",
-       "      <td>15</td>\n",
-       "      <td>11</td>\n",
-       "      <td>7</td>\n",
        "      <td>2022-06-15</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -3732,22 +3708,15 @@
        "3 2022-06-15 11:07:00                 Hey   \n",
        "4 2022-06-15 11:07:00  group_notification   \n",
        "\n",
-       "                                             message  year     month  day  \\\n",
-       "0  Messages and calls are end-to-end encrypted. N...  2021  November   22   \n",
-       "1  Your security code with Aman New changed. Tap ...  2021  November   22   \n",
-       "2  Your security code with Aman New changed. Tap ...  2022  February    2   \n",
-       "3                                    Ham hi message.  2022      June   15   \n",
-       "4  Your security code with Aman New changed. Tap ...  2022      June   15   \n",
-       "\n",
-       "   hour  minute   only_date  \n",
-       "0     7      50  2021-11-22  \n",
-       "1     7      50  2021-11-22  \n",
-       "2     2      43  2022-02-02  \n",
-       "3    11       7  2022-06-15  \n",
-       "4    11       7  2022-06-15  "
+       "                                             message  year   only_date  \n",
+       "0  Messages and calls are end-to-end encrypted. N...  2021  2021-11-22  \n",
+       "1  Your security code with Aman New changed. Tap ...  2021  2021-11-22  \n",
+       "2  Your security code with Aman New changed. Tap ...  2022  2022-02-02  \n",
+       "3                                    Ham hi message.  2022  2022-06-15  \n",
+       "4  Your security code with Aman New changed. Tap ...  2022  2022-06-15  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3758,7 +3727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3767,7 +3736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3776,7 +3745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3785,7 +3754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3794,7 +3763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -3822,6 +3791,7 @@
        "      <th>user</th>\n",
        "      <th>message</th>\n",
        "      <th>year</th>\n",
+       "      <th>only_date</th>\n",
        "      <th>month</th>\n",
        "      <th>day</th>\n",
        "      <th>hour</th>\n",
@@ -3835,6 +3805,7 @@
        "      <td>group_notification</td>\n",
        "      <td>Messages and calls are end-to-end encrypted. N...</td>\n",
        "      <td>2021</td>\n",
+       "      <td>2021-11-22</td>\n",
        "      <td>November</td>\n",
        "      <td>22</td>\n",
        "      <td>7</td>\n",
@@ -3846,6 +3817,7 @@
        "      <td>group_notification</td>\n",
        "      <td>Your security code with Aman New changed. Tap ...</td>\n",
        "      <td>2021</td>\n",
+       "      <td>2021-11-22</td>\n",
        "      <td>November</td>\n",
        "      <td>22</td>\n",
        "      <td>7</td>\n",
@@ -3857,6 +3829,7 @@
        "      <td>group_notification</td>\n",
        "      <td>Your security code with Aman New changed. Tap ...</td>\n",
        "      <td>2022</td>\n",
+       "      <td>2022-02-02</td>\n",
        "      <td>February</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
@@ -3868,6 +3841,7 @@
        "      <td>Hey</td>\n",
        "      <td>Ham hi message.</td>\n",
        "      <td>2022</td>\n",
+       "      <td>2022-06-15</td>\n",
        "      <td>June</td>\n",
        "      <td>15</td>\n",
        "      <td>11</td>\n",
@@ -3879,6 +3853,7 @@
        "      <td>group_notification</td>\n",
        "      <td>Your security code with Aman New changed. Tap ...</td>\n",
        "      <td>2022</td>\n",
+       "      <td>2022-06-15</td>\n",
        "      <td>June</td>\n",
        "      <td>15</td>\n",
        "      <td>11</td>\n",
@@ -3896,19 +3871,39 @@
        "3 2022-06-15 11:07:00                 Hey   \n",
        "4 2022-06-15 11:07:00  group_notification   \n",
        "\n",
-       "                                             message  year     month  day  \\\n",
-       "0  Messages and calls are end-to-end encrypted. N...  2021  November   22   \n",
-       "1  Your security code with Aman New changed. Tap ...  2021  November   22   \n",
-       "2  Your security code with Aman New changed. Tap ...  2022  February    2   \n",
-       "3                                    Ham hi message.  2022      June   15   \n",
-       "4  Your security code with Aman New changed. Tap ...  2022      June   15   \n",
+       "                                             message  year   only_date  \\\n",
+       "0  Messages and calls are end-to-end encrypted. N...  2021  2021-11-22   \n",
+       "1  Your security code with Aman New changed. Tap ...  2021  2021-11-22   \n",
+       "2  Your security code with Aman New changed. Tap ...  2022  2022-02-02   \n",
+       "3                                    Ham hi message.  2022  2022-06-15   \n",
+       "4  Your security code with Aman New changed. Tap ...  2022  2022-06-15   \n",
        "\n",
-       "   hour  minute  \n",
-       "0     7      50  \n",
-       "1     7      50  \n",
-       "2     2      43  \n",
-       "3    11       7  \n",
-       "4    11       7  "
+       "      month  day  hour  minute  \n",
+       "0  November   22     7      50  \n",
+       "1  November   22     7      50  \n",
+       "2  February    2     2      43  \n",
+       "3      June   15    11       7  \n",
+       "4      June   15    11       7  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1078, 9)"
       ]
      },
      "execution_count": 20,
@@ -3917,7 +3912,38 @@
     }
    ],
    "source": [
-    "df.head()"
+    "df[df['user'] == 'Hey'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words = []\n",
+    "for message in df['message']:\n",
+    "    words.extend(message.split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11997"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(words)"
    ]
   },
   {
